[gd_scene load_steps=5 format=2]

[ext_resource path="res://Audio/SFX/Objects/Spikes.wav" type="AudioStream" id=1]
[ext_resource path="res://Graphics/Hazards/spikes.png" type="Texture2D" id=2]
[ext_resource path="res://Scripts/Objects/Spikes.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 16, 16 )

[node name="Spikes" type="StaticBody2D"]
collision_layer = 8192
collision_mask = 8192
script = ExtResource( 3 )

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Spike" type="Sprite2D" parent="."]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 32, 32, 16 )

[node name="sfxSpikeShift" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
bus = "SFX"

[node name="ShiftTimer" type="Timer" parent="."]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2( 2.5, 2.6 )
process_parent = true
physics_process_parent = true

[connection signal="timeout" from="ShiftTimer" to="." method="_on_ShiftTimer_timeout"]
